# tower

./: LICENCE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: deploy.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/services/: containers.rs  docker.rs  kubernetes.rs  mod.rs
src-tauri/src/tower/: manager.rs  message.rs
src/components/cmdK/: CommandPalette.tsx  FreeSearchAction.tsx  List.tsx  ListItem.tsx  Page.tsx  Search.tsx  index.tsx  types.tsx
src/components/cmdK/commands/: container.cmd.tsx
src/components/cmdK/commands/kube/: deployments.cmd.tsx  (+3 more)
src/components/cmdK/lib/: context.tsx  utils.tsx
src/components/icons/: docker.tsx  filter.tsx  plexer.tsx  pod.tsx  quit.tsx  search.tsx  split.tsx
src/components/logs/: viewer.tsx
src/hooks/: useStore.ts
src/pages/: home.page.tsx
src/pages/panes/: docker_logs.pane.tsx  logs.pane.tsx  pod_logs.pane.tsx  settings.pane.tsx
src/stores/: command.store.ts  container.store.ts  index.ts  kubernetes.store.ts  logs.store.ts  root.store.ts  settings.store.ts  tabs.store.ts
src/types/: commands.d.ts  container.d.ts  logs.d.ts  tabs.d.ts
tauri-plugin-logs/: Cargo.toml  README.md  package.json
tauri-plugin-logs/.changes/: config.json  initial-release.md  readme.md
tauri-plugin-logs/examples/tauri-app/: package.json
tauri-plugin-logs/examples/tauri-app/src/: App.svelte
tauri-plugin-logs/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-logs/src/: lib.rs
tauri-plugin-logs/webview-src/: index.ts
(+1 files in other folders)
